[project]
name = "formwork-decision-intelligence"
version = "0.1.0"
description = "Decision intelligence pipeline for formwork BoQ optimization (demand forecasting + OR-Tools optimizer + FastAPI API)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Hackathon Team", email = "team@example.com" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-core>=2.18.0",
  "openpyxl>=3.1.0",
  "python-multipart>=0.0.9",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "lightgbm>=4.5.0",
  "ortools>=9.10.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "hypothesis>=6.112.0",
  "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["api", "domain", "optimizer", "services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

